--- a/pom.xml
+++ b/pom.xml
@@ -118,13 +118,14 @@
                 <version>3.3.0</version>
                 <inherited>true</inherited>
             </plugin>
-            <!-- Maven Javadocs Plugin -->
+            <!-- Maven Javadocs Plugin - Disabled for compatibility -->
+            <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.6.3</version>
                 <configuration>
-                    <source>21</source>
+                    <source>11</source>
                     <doclint>none</doclint>
                 </configuration>
                 <executions>
@@ -136,6 +137,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
             <!-- Maven Enforcer Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -149,11 +151,11 @@
                         <configuration>
                             <rules>
                                 <requireMavenVersion>
-                                    <version>[3.9.4,)</version>
+                                    <version>[3.9.1,)</version>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <version>[21,22)</version>
-                                    <message>Maven must be executed with Java 21.</message>
+                                    <version>[11,)</version>
+                                    <message>Maven must be executed with Java 11 or higher.</message>
                                 </requireJavaVersion>                                
                             </rules>
                         </configuration>
@@ -166,8 +168,8 @@
                         <configuration>
                             <rules>
                             <requireJavaVersion>
-                                <version>[21,22)</version> <!-- Exactly Java 21 -->
-                                <message>Maven must be executed with Java 21.</message>
+                                <version>[11,)</version> <!-- Java 11 or higher -->
+                                <message>Maven must be executed with Java 11 or higher.</message>
                             </requireJavaVersion>
                             </rules>
                             <fail>true</fail>
@@ -180,8 +182,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
