--- a/core/pom.xml
+++ b/core/pom.xml
@@ -53,6 +53,8 @@ Import-Package: javax.annotation;version=0.0.0,*
                 <artifactId>bnd-baseline-maven-plugin</artifactId>
                 <configuration>
                     <failOnMissing>false</failOnMissing>
+                    <!-- Skip baseline checks during feature branch development -->
+                    <skip>true</skip>
                 </configuration>
                 <executions>
                     <execution>
